feat: adjust swagger API doc
